removed csrf validation from callback urls,  only works for php >=7.1, fix svea pyament method

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
       "Svea\\Checkout\\": ""
     }
   },
+  "require": {
+    "php": ">=7.1"
+  },
   "repositories": [
     {
       "type": "composer",
